width set to 100% to fix overspill issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,13 @@ html {
 body {
     width: 80%; /* width 80% of parent body (HTML) */
     margin: 20px auto; /* if "0", no need for units and "auto" splits divides available space by 2*/
-    padding: 25px 15px 25px 15px;
+    padding: 25px 25px 25px 25px;
     border: 4.5px solid white;
     border-radius: 25px; /*all 4 sides are equal so only need to state the vlaue once*/
     background-color: #2B3C78;
 }
 img {
-    width: 80%;
+    width: 100%;
     display: block; /* changing image from inline to block */
     margin: 0 auto; /* only works when image has block-level behaviour */
     border-radius: 25px;
